# slugkit-generator

./: CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
data/: emoji.yaml
scripts/: format_benchmarks.py
slugkit/: CMakeLists.txt
slugkit/benchmarks/: CMakeLists.txt  filter_dictionary_benchmarks.cpp  format_pattern_benchmark.cpp  generate_from_dictionary_benchmark.cpp  generate_numbers_benchmarks.cpp  generate_slugs_benchmarks.cpp  helpers.cpp  helpers.hpp  index_benchmarks.cpp  parse_benchmark.cpp  permute_benchmark.cpp
slugkit/examples/: CMakeLists.txt
slugkit/examples/yaml-dict/: CMakeLists.txt  dictionary.yaml  main.cpp
slugkit/include/slugkit/generator/: constants.hpp  dictionary.hpp  dictionary_types.hpp  exceptions.hpp  generator.hpp  hash.hpp  io.hpp  pattern.hpp  pattern_fwd.hpp  permutations.hpp  placeholders.hpp  structured_loader.hpp  types.hpp
slugkit/include/slugkit/generator/io/: pattern_io.hpp  types_io.hpp  userver_logging.hpp
slugkit/include/slugkit/utils/: numeric.hpp  primes.hpp  roman.hpp  set.hpp  small_map.hpp  string_view_serialize.hpp  text.hpp
slugkit/src/slugkit/generator/: dictionary.cpp  generator.cpp  pattern.cpp  pattern_generator.cpp  pattern_generator.hpp  permutations.cpp  placeholders.cpp
slugkit/src/slugkit/generator/detail/: caches.hpp  indexes.cpp  indexes.hpp  pattern_parser.cpp  pattern_parser.hpp
slugkit/src/slugkit/test_utils/: helpers.cpp  helpers.hpp
slugkit/src/slugkit/utils/: numeric.cpp  primes.cpp  roman.cpp  text.cpp
slugkit/tests/: CMakeLists.txt  dictionary_test.cpp  emoji_generator_test.cpp  generator_test.cpp  index_test.cpp  mix_case_test.cpp  numerics_test.cpp  pattern_test.cpp  permutation_test.cpp  roman_test.cpp  sructrured_loading_test.cpp
